src/test/ui/issues/issue-55796.stderr
error: lifetime may not live long enough
  --> $DIR/issue-55796.rs:16:9
   |
LL | pub trait Graph<'a> {
   |                 -- lifetime `'a` defined here
...
LL |         Box::new(self.out_edges(u).map(|e| e.target()))
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ returning this value requires that `'a` must outlive `'static`

error: lifetime may not live long enough
  --> $DIR/issue-55796.rs:21:9
   |
LL | pub trait Graph<'a> {
   |                 -- lifetime `'a` defined here
...
LL |         Box::new(self.in_edges(u).map(|e| e.target()))
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ returning this value requires that `'a` must outlive `'static`

error: aborting due to 2 previous errors

